# optcg-ai-agent

./: .env.example  .gitignore  AI_PROVIDERS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MULTI_PROVIDER_UPDATE.md  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  docker-compose.yml  package-lock.json  package.json  setup.sh  test-providers.sh  verify.sh
backend/: alembic.ini  insert_sample_data.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  2026_02_12_2337-5e45decf5c47_initial_schema.py  2026_02_13_0001-a1b2c3d4e5f6_fix_avg_cost_precision.py  2026_02_13_0239-f92044a75bae_add_conversations_and_messages.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: deck_analyzer_graph.py
backend/app/agents/core/: __init__.py  ag_ui_adapter.py  agent.py  prompt_builder.py  sub_agent.py  tool.py
backend/app/agents/prompts/: strategy_agent.md  sub_agent_data.md  sub_agent_ui.md  system_communication.md  system_deck_building.md  system_orchestrator.md  system_role.md  system_rules.md  system_tips.md  system_tools.md
backend/app/agents/services/: card_manager.py  search_service.py  strategy_agent.py
backend/app/knowledge/: card_keywords.md  optcg_rules.md
backend/app/models/: __init__.py  card.py  conversation.py  deck.py  user.py
backend/app/schemas/: __init__.py  card.py  chat.py  deck.py  user.py
backend/app/services/: ai_provider.py  card_sync.py  conversation_service.py  deck_validator.py  knowledge_service.py  memory_service.py  synergy_detector.py
backend/scripts/: index_knowledge.py  sync_cards.py
(+46 files in other folders)
